--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,13 +1,83 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+
 body {
 	background-color: #000000;
 	color: #FFFFFF;
 	font-family: "Helvetica", sans-serif;
+	padding: 20px;
 }
+
+article {
+	line-height: 1.5;
+}
+
+hr {
+	margin: 30px 0;
+}
+
+ul {
+	list-style-type: none;
+	color: #CCEDFF;
+}
+
+h1 {
+	color: #51DAE8;
+	font-size: 60px;
+	padding: 0 0 5px 0;
+}
+
+h3 {
+	color: #65FFE2;
+	font-size: 24px;
+}
+
+h4 {
+	color: #51E8A2;
+	font-size: 20px;
+	padding: 10px 0;
+}
+
+p {
+	color: #CCEDFF;
+	padding: 10px 0;
+	text-align: justify;
+}
+
+a {
+	text-decoration: none;
+	font-style: bold;
+}
+
+a:link {
+	color: #59C4FF;
+}
+
+a:visited {
+	color: #59C4FF;
+}
+
+a:focus {
+	text-decoration: underline;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
+a:active {
+	text-decoration: underline;
+}
+
 
 .slogan {
 	font-style: italic;
+	color: #EEEEEE;
+	padding: 30px 0;
 }
 
-.hero {
-	: 50%;
+#hero {
+	max-width: 1200px;
 }
